# jupytergl

./: .gitignore  README.md  notes.md  package.json  requirements.txt  setup.cfg
jlplugin/: package.json  setup.py
jlplugin/jupytergl_jl/: __init__.py
jlplugin/scripts/: buildExtension.js
jlplugin/src/: plugin.ts  widget.ts
jupytergl/: comm.py  gl.py  glu.py  kernel.py  kernelspec.py
jupytergl/fileio/: wavefront.py
src/: comm.ts  index.ts  json.ts  jupytergl.schema.json  views.ts
