[wheel]
universal = 1

[metadata]
name = jupytergl
author = Vidar T. Fauske
author-email = vidartf@gmail.com
summary = Provide a server-side shim for WebGL
description-file = README.md
home-page = https://github.com/vidartf/jupytergl
license = BSD-3-Clause
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: JavaScript
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development :: User Interfaces

[files]
packages =
    jupytergl
